--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -2,12 +2,14 @@
 - hosts: all
   become: yes
   tasks:
-  - name: i want to install apache2 server
+  - name: i want to install apache2 server (apt-get install apache2)
     apt:
       name: apache2
-      state: present    
+      state: present   
+    when: ansible_os_family=="Debian"
 
-  - name: i want to start apache2 webserver
+  - name: i want to start apache2 webserver (service apache2 start)
     service:
       name: apache2
       state: started
+    when: ansible_os_family=="Debian"
