--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -6,10 +6,10 @@
     apt:
       name: apache2
       state: present   
-    when: ansible_os_family=="Debian"
+    when: ansible_os_family=="redhat"
 
   - name: i want to start apache2 webserver (service apache2 start)
     service:
       name: apache2
       state: started
-    when: ansible_os_family=="Debian"
+    when: ansible_os_family=="redhat"
