--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -13,3 +13,15 @@
       name: apache2
       state: started
     when: ansible_os_family=="Debian"
+
+  - name: i want to install httpd webserver (yum install httpd)
+    dnf:
+      name: httpd
+      state: present
+    when: ansible_os_family=="RedHat"
+
+  - name: i want to start httpd webserver (service httpd start)
+    service:
+      name: httpd
+      state: started
+    when: ansible_os_family=="RedHat"
