--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: mywebservers
   become: yes
   tasks:
   - name: i want to install apache2 server (apt-get install apache2)
