--- a/installjava.yml
+++ b/installjava.yml
@@ -11,5 +11,5 @@
   - name: i want to install java  on redhat(service apache2 start)
     dnf:
       name: "{{myredhatjavapack}}"
-      state: started
+      state: present
     when: ansible_os_family=="RedHat"
