--- a/mydebug.yml
+++ b/mydebug.yml
@@ -9,3 +9,16 @@
   - name: I want to display my first result
     debug:
       msg: "{{myresult}}"
+
+  - name: I want to install git
+    apt:
+      name: git
+      state: present
+    when: myresult.stderr!==""
+
+
+  - name: I want to install tree
+    apt:
+      name: tree
+      state: present
+    when: myresult.stderr==""
