--- a/mydebug.yml
+++ b/mydebug.yml
@@ -14,7 +14,7 @@
     apt:
       name: git
       state: present
-    when: myresult.stderr!==""
+    when: myresult.stderr!=""
 
 
   - name: I want to install tree
