--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -4,9 +4,9 @@
   tasks:
   - include_tasks: myfile.yml
   - name: I want to install apache
-    service:
+    apt:
       name: apache2
-      state: started
+      state: present
 
   - name: I want to create folder
     file:
