--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -28,3 +28,10 @@
     template:
       src: myindex.j2
       dest: /var/www/html/index.html
+  notify: startwebserver
+
+  handlers:
+  - name: startwebserver
+    service:
+      name: apache2
+      state: present
