--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -3,35 +3,33 @@
   become: yes
   tasks:
   - include_tasks: myfile.yml
-  - name: I want to install apache
-    apt:
-      name: apache2
-      state: present
+  -   name: i want to install apache2 server (apt-get install apache2)
+      apt:
+        name: apache2
+        state: present       
 
-  - name: I want to create folder
-    file:
-      path: /home/saif/myfolder
-      state: directory
+  -   name: i want to start apache2 webserver (service apache2 start)
+      service:
+        name: apache2
+        state: started
 
-  - name: I want to copy file to folder
-    copy:
-      src: mytextfile
-      dest: /home/saif/myfolder/mytextfile
+  -   name: I want to create folder
+      file:
+        path: /home/saif/myfolder
+        state: directory
 
-  - name: download any internt file
-    get_url:
-      url: https://updates.jenkins.io/download/war/2.508/jenkins.war
-      dest: /home/saif/myfolder/jenkins.war
-      force_basic_auth: yes
+  -   name: I want to copy file to folder
+      copy:
+        src: mytextfile
+        dest: /home/saif/myfolder/mytextfile
 
-  - name: I want to copy index fileto host node
-    template:
-      src: myindex.j2
-      dest: /var/www/html/index.html
-    notify: startwebserver
+  -   name: download any internt file
+      get_url:
+        url: https://updates.jenkins.io/download/war/2.508/jenkins.war
+        dest: /home/saif/myfolder/jenkins.war
+        force_basic_auth: yes
 
-  handlers:
-  - name: startwebserver
-    service:
-      name: apache2
-      state: present
+  -   name: I want to copy index fileto host node
+      template:
+        src: myindex.j2
+        dest: /var/www/html/index.html
