--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -11,7 +11,7 @@
   -   name: i want to start apache2 webserver (service apache2 start)
       service:
         name: apache2
-        state: started
+        state: stopped
 
   -   name: I want to create folder
       file:
