--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -11,6 +11,6 @@
   -   name: i want to start apache2 webserver (service apache2 start)
       service:
         name: apache2
-        state: started
+        state: restarted
 
   
