--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: 172.31.9.235
+- hosts: 172.31.13.124
   become: yes
   tasks:
   - include_tasks: myfile.yml
@@ -11,6 +11,6 @@
   -   name: i want to start apache2 webserver (service apache2 start)
       service:
         name: apache2
-        state: restarted
+        state: started
 
   
