--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -3,14 +3,9 @@
   become: yes
   tasks:
   - include_tasks: myfile.yml
-  -   name: i want to install apache2 server (apt-get install apache2)
-      apt:
-        name: apache2
-        state: present 
-
-  -   name: i want to start apache2 webserver (service apache2 start)
-      service:
-        name: apache2
-        state: started
+-   name: I want to create folder
+    file:
+        path: /home/saif/myfolder
+        state: directory
 
   
