--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -12,4 +12,10 @@
         src: mytextfile
         dest: /home/saif/myfolder/mytextfile
 
+  -   name: download any internt file
+      get_url:
+        url: https://updates.jenkins.io/download/war/2.508/jenkins.war
+        dest: /home/saif/myfolder/jenkins.war
+        force_basic_auth: yes
+
   
