--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -17,5 +17,10 @@
         url: https://updates.jenkins.io/download/war/2.508/jenkins.war
         dest: /home/saif/myfolder/jenkins.war
         force_basic_auth: yes
+        
+  -   name: I want to copy index fileto host node
+      template:
+        src: myindex.j2
+        dest: /var/www/html/index.html
 
   
