--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -7,7 +7,10 @@
       file:
         path: /home/saif/myfolder
         state: directory
-  -   name: I want to copy file to folder
+        notify: webserver
+        
+  handlers:
+  -   name: webserver
       copy:
         src: mytextfile
         dest: /home/saif/myfolder/mytextfile
@@ -17,7 +20,7 @@
         url: https://updates.jenkins.io/download/war/2.508/jenkins.war
         dest: /home/saif/myfolder/jenkins.war
         force_basic_auth: yes
-        
+
   -   name: I want to copy index fileto host node
       template:
         src: myindex.j2
