--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -3,13 +3,17 @@
   become: yes
   tasks:
   - include_tasks: myfile.yml
+  - name: i want to install apache2 server (apt-get install apache2)
+    apt:
+      name: apache2
+      state: present   
+      
   -   name: I want to create folder
       file:
         path: /home/saif/myfolder
         state: directory
-      notify: webserver
+     
 
-  handlers:
   -   name: webserver
       copy:
         src: mytextfile
