--- a/mytomcatrole/tasks/main.yml
+++ b/mytomcatrole/tasks/main.yml
@@ -4,3 +4,5 @@
 - include_tasks: Download.yml
 - include_tasks: addusergroup.yml
 - include_tasks: permission.yml
+- include_tasks: tomcatservice.yml
+- include_tasks: tomcatstart.yml
