--- a/mytomcatrole/tasks/permission.yml
+++ b/mytomcatrole/tasks/permission.yml
@@ -1,6 +1,6 @@
 ---
 - name: change owner on tomcat folder
-  command: sudo chown -R tomcat: /opt/tomcat
+  command: sudo chown -R tomcat /opt/tomcat
 
 - name: give execute permission on bin folder
   command: sudo sh -c 'chmod +x /opt/tomcat/bin/*.sh'
