--- a/mytomcatrole/tasks/tomcatservice.yml
+++ b/mytomcatrole/tasks/tomcatservice.yml
@@ -2,4 +2,4 @@
 - name: copy tomcat service file into node side
   template:
     src: templates/mytomcatservice.j2
-    destn: /etc/systemd/system/tomcat.service
+    dest: /etc/systemd/system/tomcat.service
